--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,8 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding: 8px;
 }
 
 .icon {
@@ -66,4 +68,29 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+
+.x {
+  display: flex;
+}
+
+.header {
+  flex: 1;
+}
+
+.right {
+  margin: 8px;
+}
+
+.header {
+  font-weight: bold;
+  font-size: large;
+}
+
+.text {
+  margin: 8px 0px;
+}
+
+.left {
+  margin-top: 8px;
 }
