--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,8 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -24,4 +26,35 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header, .footer, .content {
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-links, .right-links {
+  display: flex;
+  margin-left: -40px;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(81, 81, 81);
+  justify-content: space-around;
+  padding: 10px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+.content {
+  flex-direction: column;
+  align-items: center;
+  margin: 200px 0px;
 }
